src/less/main.less
/* ... */
.button:hover, button:hover {
  color: dodgerblue;
}

.create {
  background: white;
  max-width: 400px;
  margin: 100px auto;
  pre {
    overflow-x: auto;
    border: 1px solid silver;
    padding: 10px;
  }
}

.main-content {
  font-family: 'Raleway';
  header {
    background-image: url('../images/cover.jpg');
    background-size: cover;
    background-position: center;
    font-size: 50px;
    height: 400px;

    .flavor-text {
      text-align: center;
      h2 {
        margin-top: 25px;
        font-weight: 600;
        font-size: 36px;
        color: #ecf0f1;
        max-width: 770px;
        margin-left: auto;
        margin-right: auto;
      }

      h3 {
        font-weight: 300;
        font-size: 28px;
        color: #ecf0f1;
      }
    }
    .logo-container {
      padding-top: 50px;
      text-align: center;
      h1 {
        margin-bottom: 0;
        text-align: center;
        text-indent: -10000px;
      }
    }
  }

  .logo {
    background-image: url('../images/wine.png');
    height: 105px;
    width: 75px;
    display: inline-block;
    -webkit-animation: wine 0.2s steps(5) infinite;
       -moz-animation: wine 0.2s steps(5) infinite;
        -ms-animation: wine 0.2s steps(5) infinite;
         -o-animation: wine 0.2s steps(5) infinite;
            animation: wine 0.2s steps(5) infinite;

    -webkit-animation-direction: alternate; /* Chrome, Safari, Opera */
    animation-direction: alternate;
  }

  @-webkit-keyframes wine {
     from { background-position:    0px; }
       to { background-position: -375px; }
  }

  @-moz-keyframes wine {
     from { background-position:    0px; }
       to { background-position: -375px; }
  }

  @-ms-keyframes wine {
     from { background-position:    0px; }
       to { background-position: -375px; }
  }

  @-o-keyframes wine {
     from { background-position:    0px; }
       to { background-position: -375px; }
  }

  @keyframes wine {
     from { background-position:    0px; }
       to { background-position: -375px; }
  }

  .animated-logo,
  .animated-loop {
    display: inline-block;
    width: 350px;
    height: 100px;
    background-image: url("../images/animated.png");
  }

  .animated-logo {
    -webkit-animation: play 1.2s steps(30) 1;
       -moz-animation: play 1.2s steps(30) 1;
        -ms-animation: play 1.2s steps(30) 1;
         -o-animation: play 1.2s steps(30) 1;
            animation: play 1.2s steps(30) 1;
  }

  @-webkit-keyframes play {
     from { background-position:    0px; }
       to { background-position: -10500px; }
  }

  @-moz-keyframes play {
     from { background-position:    0px; }
       to { background-position: -10500px; }
  }

  @-ms-keyframes play {
     from { background-position:    0px; }
       to { background-position: -10500px; }
  }

  @-o-keyframes play {
     from { background-position:    0px; }
       to { background-position: -10500px; }
  }

  @keyframes play {
     from { background-position:    0px; }
       to { background-position: -10500px; }
  }

  .animated-loop {
    -webkit-animation: animatedloop 0.2s steps(5) infinite;
       -moz-animation: animatedloop 0.2s steps(5) infinite;
        -ms-animation: animatedloop 0.2s steps(5) infinite;
         -o-animation: animatedloop 0.2s steps(5) infinite;
            animation: animatedloop 0.2s steps(5) infinite;

    -webkit-animation-direction: alternate; /* Chrome, Safari, Opera */
    animation-direction: alternate;
  }

  @-webkit-keyframes animatedloop {
     from { background-position:    -10500px; }
       to { background-position: -12250px; }
  }

  @-moz-keyframes animatedloop {
     from { background-position:    -10500px; }
       to { background-position: -12250px; }
  }

  @-ms-keyframes animatedloop {
     from { background-position:    -10500px; }
       to { background-position: -12250px; }
  }

  @-o-keyframes animatedloop {
     from { background-position:    -10500px; }
       to { background-position: -12250px; }
  }

  @keyframes animatedloop {
     from { background-position:    -10500px; }
       to { background-position: -12250px; }
  }

  .benefits {
    .row {
      padding-left: 10%;
      padding-right: 10%;
      padding-top: 50px;
      padding-bottom: 50px;
    }

    h3 {
      font-weight: 600;
      font-size: 24px;
    }

    p {
      font-size: 16px;
      font-weight: 300;
    }

    .text-col {
      .text-cont {
        max-width: 500px;
      }
      p {
        text-align: justify;
      }
      margin-top: 25px;
    }

    .first {
      .image-col {
        text-align: left;
        padding-right: 50px;
      }
      .text-cont {
        margin-left: auto;
      }
    }

    .second {
      background-image: url('../images/second_cover.jpg');
      background-size: cover;
      background-position: center;
      color: white;

      .image-col {
        text-align: right;
      }

      .text-cont {
        margin-right: auto;
      }
    }

    .third {
      .image-col {
        text-align: left;
      }

      .text-cont {
        margin-left: auto;
      }
    }
  }

  footer {
    padding: 0 10%;
    height: 75px;
    line-height: 75px;
    color: white;
    background-color: black;
  }
}

@media screen and (max-width: 768px) {
  .image-col {
    text-align: center !important;
  }

  .text-cont {
    margin: 0 auto !important;
  }
}

